--- a/style.css
+++ b/style.css
@@ -147,9 +147,11 @@ button:hover {
 
 
 
+
+
 /* Media Query */
 
-@media screen and (max-width: 550px){
+@media screen and (max-width: 560px){
     .container {
         width: 100%;
         margin: auto;
@@ -158,5 +160,20 @@ button:hover {
     #taskForm {
         width: 95%;
         margin: auto;
-    }  
+    } 
+
+    .task-container {
+        width: 100%;
+    }
+    
+    .task-list {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .task-details {
+        width: 98%;
+        margin: auto;
+    }
 }
