--- a/style.css
+++ b/style.css
@@ -176,4 +176,22 @@ button:hover {
         width: 98%;
         margin: auto;
     }
+
+    .task-card {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .task-actions {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        margin-top: 10px;
+    }
+
+    .complete-span {
+        display: flex;
+        align-items: self-start;
+        margin-top: 5px;
+    }
 }
